Correct the preview type to string

Fixes: QTBUG-97622
Pick-to: 6.2.1 6.2
Change-Id: I31d344401ce5adb64e5e356a39fe6647a6618469
Reviewed-by: Lars Knoll <lars.knoll@qt.io>